--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.15.0
+  cloud_firestore: ^4.8.4
+  webview_flutter: ^4.2.2
+  firebase_auth: ^4.7.2
+  cloud_functions: ^4.3.4
 
 dev_dependencies:
   flutter_test:
