--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   webview_flutter: ^4.2.3
   firebase_auth: ^4.7.2
   cloud_functions: ^4.3.4
+  logger: ^2.0.1
 
 dev_dependencies:
   flutter_test:
