--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.861621052394-8f6p6p0kkn2o3mjrfhhr4u1k1bmug05s</string>
 	<key>API_KEY</key>
-	<string>AIzaSyC21xlGo-GPxlWqagdezYEA7BqEzZWhJL4</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>861621052394</string>
 	<key>PLIST_VERSION</key>
